--- a/todo_list/base/templates/base/task_confirm_delete.html
+++ b/todo_list/base/templates/base/task_confirm_delete.html
@@ -1,6 +1,11 @@
-<a href="{% url 'tasks' %}"></a>
+{% extends 'base/main.html' %}
+{% block content %}
+
+<a href="{% url 'tasks' %}">Volver a la lista</a>
 <form method="POST">
     {% csrf_token %}
-    <p>Estas seguro de que quieres eliminar esta tarea? {{task}}</p>
-    <input type="submit" value="Delete">
+    <p>¿Estás seguro de que quieres eliminar esta tarea? {{ task }}</p>
+    <input type="submit" value="Eliminar">
 </form>
+
+{% endblock content %}
