--- a/todo_list/base/templates/base/task_list.html
+++ b/todo_list/base/templates/base/task_list.html
@@ -1,38 +1,64 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo APP</title>
-</head>
-<body>
+{% extends 'base/main.html' %}
+{% block content %}
 
-    {% if request.user.is_authenticated %}
-    <p>{{request.user}}</p>
-    <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-    <a href="{% url 'login' %}">Login</a>
-    {% endif %}
-    
-    <h1>ToDo APP</h1>
-    <p>By Gary Y. Martinez Alvis</p>
+<div class="header-bar">
+    <div>
+        <h1>Hola {{request.user|title}}</h1>
+        <h3 style="margin:0">Tienes <i>{{count}}</i> terea{{count|pluralize:'s'}} pendiente{{count|pluralize:'s'}}.</h3>
+    </div>
+</div>
 
-    <a href="{% url 'task-create' %}">Add Task</a>
+{% if request.user.is_authenticated %}
+<form method="POST" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
+{% else %}
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
 
-    <table>
-        <tr>
-            <th>Items</th>
-        </tr>
-        {% for task in tasks %}
-        <tr>
-            <td>{{task.title}}</td>
-            <td><a href="{% url 'task' task.id %}">View</a></td>
-            <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-            <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-        </tr>
-        {% empty %}
-        <h3>No hay items en la lista</h3>
-        {% endfor %}
-    </table>
+<hr>
+<h1>ToDo APP</h1>
 
-</body>
-</html>
+<a href="{% url 'task-create' %}">Add Task</a>
+
+<form method="GET">
+    <input type="text" name="search-area" value="{{search_input}}">
+    <input type="submit" value="Buscar">
+</form>
+
+<table>
+    <tr>
+        <th>Items</th>
+    </tr>
+    {% for task in tasks %}
+    <tr>
+        <td>{{task.title}}</td>
+        <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+    </tr>
+    {% empty %}
+    <h3>No hay items en la lista</h3>
+    {% endfor %}
+</table>
+
+<div class="task-items-wrapper">
+    {% for task in tasks %}
+    <div class="task-wrapper">
+        {% if task.complete %}
+        <hr>
+        <h3>Tareas completadas</h3>
+        <div class="task-title">
+            <div class="task-complete-icon"></div>
+            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i>
+        </div>
+        <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+        {% endif %}
+    </div>
+    {% empty %}
+    <h3>No tienes items en la lista</h3>
+    {% endfor %}
+</div>
+
+{% endblock content %}
