--- a/todo_list/base/templates/base/login.html
+++ b/todo_list/base/templates/base/login.html
@@ -1,14 +1,13 @@
 {% extends 'base/main.html' %}
+{% load static %}
+
 {% block content %}
-
-<h1>Login</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Login">
-</form>
-
-<p>Tienes una cuenta? <a href="{% url 'register' %}">Registrar</a></p>
-
+<div class="login-container">
+    <h2>Login</h2>
+    <form method="POST" action="{% url 'login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+    </form>
+</div>
 {% endblock content %}
