--- a/todo_list/base/templates/base/main.html
+++ b/todo_list/base/templates/base/main.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do Items</title>
-
-    <style>
-        body{
-            background-color: aliceblue;
-        }
-    </style>
-
+    <title>ToDo App</title>
+    <link rel="stylesheet" href="{% static 'base/styles.css' %}">
 </head>
 <body>
-   
     <div class="container">
         {% block content %}
-
         {% endblock content %}
     </div>
-
 </body>
 </html>
