Avance y correcciones de proyecto

--- a/todo_list/base/templates/base/main.html
+++ b/todo_list/base/templates/base/main.html
@@ -1,11 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
-    <link rel="stylesheet" href="{% static 'base/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base/styles.css' %}">
 </head>
 <body>
     <div class="container">
