--- a/todo_list/base/templates/base/register.html
+++ b/todo_list/base/templates/base/register.html
@@ -8,5 +8,5 @@
     <input type="submit" value="Register">
 </form>
 
-<p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Login</a></p>
+<p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
 {% endblock content %}
