--- a/todo_list/base/static/base/styles.css
+++ b/todo_list/base/static/base/styles.css
@@ -1,6 +1,9 @@
+@import 
+url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f7f6;
+    background-color: #3B3B3B;
     margin: 0;
     padding: 0;
     display: flex;
@@ -77,7 +80,14 @@ th {
 }
 
 .task-complete-icon {
+    height: 20px;
+    width: 20px;
     color: green;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 
 .task-wrapper {
