--- a/todo_list/base/templates/base/login.html
+++ b/todo_list/base/templates/base/login.html
@@ -3,11 +3,12 @@
 
 {% block content %}
 <div class="login-container">
-    <h2>Login</h2>
+    <h2>Inicio de sesión</h2>
     <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button type="submit">Iniciar sesión</button>
     </form>
+<p>¿No tienes una cuenta? <a href="{% url 'register' %}">Crear cuenta</a></p>
 </div>
 {% endblock content %}
